parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    ABREASPAS
    ATRIBUICAO
    BLOCO
    BLOCOS
    CARACTERE
    DEFVARIAVEL
    DIGITO
    E
    ESPACO
    FECHAASPAS
    FIM
    LINETERMINATOR
    OU
    QUEBRALINHA
    SIMBOLO
    VET
    VF

Grammar

Rule 0     S' -> programa
Rule 1     programa -> inicio
Rule 2     inicio -> INICIO ABRECHAVE blocos FECHACHAVE
Rule 3     id -> ID
Rule 4     le -> LE ABREPARENTESE TIPO id FECHAPARENTESE PONTOEVIRGULA
Rule 5     imp -> IMP ABREPARENTESE str FECHAPARENTESE PONTOEVIRGULA
Rule 6     imp -> IMP ABREPARENTESE expressao FECHAPARENTESE PONTOEVIRGULA
Rule 7     str -> TXT
Rule 8     blocos -> bloco blocos
Rule 9     blocos -> bloco
Rule 10    comentarios -> COMENTARIOS
Rule 11    bloco -> enqt
Rule 12    bloco -> pra
Rule 13    bloco -> se
Rule 14    bloco -> imp
Rule 15    bloco -> le
Rule 16    bloco -> atribuir
Rule 17    bloco -> atribuicao
Rule 18    bloco -> comentarios
Rule 19    expressao -> id
Rule 20    expressao -> NUM
Rule 21    expressao -> aritimetico
Rule 22    expressao -> ABREPARENTESE expressao FECHAPARENTESE
Rule 23    expressao -> RESPOSTABOOLEANA
Rule 24    aritimetico -> expressao OPERADOR_DIVISAO expressao
Rule 25    aritimetico -> expressao OPERADOR_MULTIPLICACAO expressao
Rule 26    aritimetico -> expressao OPERADOR_MAIS expressao
Rule 27    aritimetico -> expressao OPERADOR_MENOS expressao
Rule 28    atribuicao -> ATRIBUIR expressao
Rule 29    atribuicao -> ATRIBUIR ABRECOLCHETE lista FECHACOLCHETE
Rule 30    lista -> NUM
Rule 31    lista -> id
Rule 32    lista -> lista VIRGULA lista
Rule 33    atribuir -> id atribuicao PONTOEVIRGULA
Rule 34    atribuir -> TIPO ID atribuicao PONTOEVIRGULA
Rule 35    condicional -> atomica
Rule 36    condicional -> atomica LOGICO atomica
Rule 37    atomica -> RESPOSTABOOLEANA
Rule 38    atomica -> NUM
Rule 39    atomica -> id
Rule 40    atomica -> NAO condicional
Rule 41    atomica -> condicional RELACIONAL condicional
Rule 42    enqt -> ABREPARENTESE condicional FECHAPARENTESE ENQT ABRECHAVE blocos FECHACHAVE
Rule 43    senao -> SENAO ABRECHAVE bloco FECHACHAVE
Rule 44    se -> SE ABREPARENTESE condicional FECHAPARENTESE ABRECHAVE blocos FECHACHAVE
Rule 45    se -> SE ABREPARENTESE condicional FECHAPARENTESE ABRECHAVE blocos FECHACHAVE senao
Rule 46    pra -> PRA ABREPARENTESE id expressao expressao FECHAPARENTESE ABRECHAVE bloco FECHACHAVE

Terminals, with rules where they appear

ABREASPAS            : 
ABRECHAVE            : 2 42 43 44 45 46
ABRECOLCHETE         : 29
ABREPARENTESE        : 4 5 6 22 42 44 45 46
ATRIBUICAO           : 
ATRIBUIR             : 28 29
BLOCO                : 
BLOCOS               : 
CARACTERE            : 
COMENTARIOS          : 10
DEFVARIAVEL          : 
DIGITO               : 
E                    : 
ENQT                 : 42
ESPACO               : 
FECHAASPAS           : 
FECHACHAVE           : 2 42 43 44 45 46
FECHACOLCHETE        : 29
FECHAPARENTESE       : 4 5 6 22 42 44 45 46
FIM                  : 
ID                   : 3 34
IMP                  : 5 6
INICIO               : 2
LE                   : 4
LINETERMINATOR       : 
LOGICO               : 36
NAO                  : 40
NUM                  : 20 30 38
OPERADOR_DIVISAO     : 24
OPERADOR_MAIS        : 26
OPERADOR_MENOS       : 27
OPERADOR_MULTIPLICACAO : 25
OU                   : 
PONTOEVIRGULA        : 4 5 6 33 34
PRA                  : 46
QUEBRALINHA          : 
RELACIONAL           : 41
RESPOSTABOOLEANA     : 23 37
SE                   : 44 45
SENAO                : 43
SIMBOLO              : 
TIPO                 : 4 34
TXT                  : 7
VET                  : 
VF                   : 
VIRGULA              : 32
error                : 

Nonterminals, with rules where they appear

aritimetico          : 21
atomica              : 35 36 36
atribuicao           : 17 33 34
atribuir             : 16
bloco                : 8 9 43 46
blocos               : 2 8 42 44 45
comentarios          : 18
condicional          : 40 41 41 42 44 45
enqt                 : 11
expressao            : 6 22 24 24 25 25 26 26 27 27 28 46 46
id                   : 4 19 31 33 39 46
imp                  : 14
inicio               : 1
le                   : 15
lista                : 29 32 32
pra                  : 12
programa             : 0
se                   : 13
senao                : 45
str                  : 5

Parsing method: LALR

state 0

    (0) S' -> . programa
    (1) programa -> . inicio
    (2) inicio -> . INICIO ABRECHAVE blocos FECHACHAVE

    INICIO          shift and go to state 3

    programa                       shift and go to state 1
    inicio                         shift and go to state 2

state 1

    (0) S' -> programa .



state 2

    (1) programa -> inicio .

    $end            reduce using rule 1 (programa -> inicio .)


state 3

    (2) inicio -> INICIO . ABRECHAVE blocos FECHACHAVE

    ABRECHAVE       shift and go to state 4


state 4

    (2) inicio -> INICIO ABRECHAVE . blocos FECHACHAVE
    (8) blocos -> . bloco blocos
    (9) blocos -> . bloco
    (11) bloco -> . enqt
    (12) bloco -> . pra
    (13) bloco -> . se
    (14) bloco -> . imp
    (15) bloco -> . le
    (16) bloco -> . atribuir
    (17) bloco -> . atribuicao
    (18) bloco -> . comentarios
    (42) enqt -> . ABREPARENTESE condicional FECHAPARENTESE ENQT ABRECHAVE blocos FECHACHAVE
    (46) pra -> . PRA ABREPARENTESE id expressao expressao FECHAPARENTESE ABRECHAVE bloco FECHACHAVE
    (44) se -> . SE ABREPARENTESE condicional FECHAPARENTESE ABRECHAVE blocos FECHACHAVE
    (45) se -> . SE ABREPARENTESE condicional FECHAPARENTESE ABRECHAVE blocos FECHACHAVE senao
    (5) imp -> . IMP ABREPARENTESE str FECHAPARENTESE PONTOEVIRGULA
    (6) imp -> . IMP ABREPARENTESE expressao FECHAPARENTESE PONTOEVIRGULA
    (4) le -> . LE ABREPARENTESE TIPO id FECHAPARENTESE PONTOEVIRGULA
    (33) atribuir -> . id atribuicao PONTOEVIRGULA
    (34) atribuir -> . TIPO ID atribuicao PONTOEVIRGULA
    (28) atribuicao -> . ATRIBUIR expressao
    (29) atribuicao -> . ATRIBUIR ABRECOLCHETE lista FECHACOLCHETE
    (10) comentarios -> . COMENTARIOS
    (3) id -> . ID

    ABREPARENTESE   shift and go to state 15
    PRA             shift and go to state 16
    SE              shift and go to state 18
    IMP             shift and go to state 19
    LE              shift and go to state 20
    TIPO            shift and go to state 21
    ATRIBUIR        shift and go to state 23
    COMENTARIOS     shift and go to state 24
    ID              shift and go to state 22

    blocos                         shift and go to state 5
    bloco                          shift and go to state 6
    enqt                           shift and go to state 7
    pra                            shift and go to state 8
    se                             shift and go to state 9
    imp                            shift and go to state 10
    le                             shift and go to state 11
    atribuir                       shift and go to state 12
    atribuicao                     shift and go to state 13
    comentarios                    shift and go to state 14
    id                             shift and go to state 17

state 5

    (2) inicio -> INICIO ABRECHAVE blocos . FECHACHAVE

    FECHACHAVE      shift and go to state 25


state 6

    (8) blocos -> bloco . blocos
    (9) blocos -> bloco .
    (8) blocos -> . bloco blocos
    (9) blocos -> . bloco
    (11) bloco -> . enqt
    (12) bloco -> . pra
    (13) bloco -> . se
    (14) bloco -> . imp
    (15) bloco -> . le
    (16) bloco -> . atribuir
    (17) bloco -> . atribuicao
    (18) bloco -> . comentarios
    (42) enqt -> . ABREPARENTESE condicional FECHAPARENTESE ENQT ABRECHAVE blocos FECHACHAVE
    (46) pra -> . PRA ABREPARENTESE id expressao expressao FECHAPARENTESE ABRECHAVE bloco FECHACHAVE
    (44) se -> . SE ABREPARENTESE condicional FECHAPARENTESE ABRECHAVE blocos FECHACHAVE
    (45) se -> . SE ABREPARENTESE condicional FECHAPARENTESE ABRECHAVE blocos FECHACHAVE senao
    (5) imp -> . IMP ABREPARENTESE str FECHAPARENTESE PONTOEVIRGULA
    (6) imp -> . IMP ABREPARENTESE expressao FECHAPARENTESE PONTOEVIRGULA
    (4) le -> . LE ABREPARENTESE TIPO id FECHAPARENTESE PONTOEVIRGULA
    (33) atribuir -> . id atribuicao PONTOEVIRGULA
    (34) atribuir -> . TIPO ID atribuicao PONTOEVIRGULA
    (28) atribuicao -> . ATRIBUIR expressao
    (29) atribuicao -> . ATRIBUIR ABRECOLCHETE lista FECHACOLCHETE
    (10) comentarios -> . COMENTARIOS
    (3) id -> . ID

    FECHACHAVE      reduce using rule 9 (blocos -> bloco .)
    ABREPARENTESE   shift and go to state 15
    PRA             shift and go to state 16
    SE              shift and go to state 18
    IMP             shift and go to state 19
    LE              shift and go to state 20
    TIPO            shift and go to state 21
    ATRIBUIR        shift and go to state 23
    COMENTARIOS     shift and go to state 24
    ID              shift and go to state 22

    bloco                          shift and go to state 6
    blocos                         shift and go to state 26
    enqt                           shift and go to state 7
    pra                            shift and go to state 8
    se                             shift and go to state 9
    imp                            shift and go to state 10
    le                             shift and go to state 11
    atribuir                       shift and go to state 12
    atribuicao                     shift and go to state 13
    comentarios                    shift and go to state 14
    id                             shift and go to state 17

state 7

    (11) bloco -> enqt .

    ABREPARENTESE   reduce using rule 11 (bloco -> enqt .)
    PRA             reduce using rule 11 (bloco -> enqt .)
    SE              reduce using rule 11 (bloco -> enqt .)
    IMP             reduce using rule 11 (bloco -> enqt .)
    LE              reduce using rule 11 (bloco -> enqt .)
    TIPO            reduce using rule 11 (bloco -> enqt .)
    ATRIBUIR        reduce using rule 11 (bloco -> enqt .)
    COMENTARIOS     reduce using rule 11 (bloco -> enqt .)
    ID              reduce using rule 11 (bloco -> enqt .)
    FECHACHAVE      reduce using rule 11 (bloco -> enqt .)


state 8

    (12) bloco -> pra .

    ABREPARENTESE   reduce using rule 12 (bloco -> pra .)
    PRA             reduce using rule 12 (bloco -> pra .)
    SE              reduce using rule 12 (bloco -> pra .)
    IMP             reduce using rule 12 (bloco -> pra .)
    LE              reduce using rule 12 (bloco -> pra .)
    TIPO            reduce using rule 12 (bloco -> pra .)
    ATRIBUIR        reduce using rule 12 (bloco -> pra .)
    COMENTARIOS     reduce using rule 12 (bloco -> pra .)
    ID              reduce using rule 12 (bloco -> pra .)
    FECHACHAVE      reduce using rule 12 (bloco -> pra .)


state 9

    (13) bloco -> se .

    ABREPARENTESE   reduce using rule 13 (bloco -> se .)
    PRA             reduce using rule 13 (bloco -> se .)
    SE              reduce using rule 13 (bloco -> se .)
    IMP             reduce using rule 13 (bloco -> se .)
    LE              reduce using rule 13 (bloco -> se .)
    TIPO            reduce using rule 13 (bloco -> se .)
    ATRIBUIR        reduce using rule 13 (bloco -> se .)
    COMENTARIOS     reduce using rule 13 (bloco -> se .)
    ID              reduce using rule 13 (bloco -> se .)
    FECHACHAVE      reduce using rule 13 (bloco -> se .)


state 10

    (14) bloco -> imp .

    ABREPARENTESE   reduce using rule 14 (bloco -> imp .)
    PRA             reduce using rule 14 (bloco -> imp .)
    SE              reduce using rule 14 (bloco -> imp .)
    IMP             reduce using rule 14 (bloco -> imp .)
    LE              reduce using rule 14 (bloco -> imp .)
    TIPO            reduce using rule 14 (bloco -> imp .)
    ATRIBUIR        reduce using rule 14 (bloco -> imp .)
    COMENTARIOS     reduce using rule 14 (bloco -> imp .)
    ID              reduce using rule 14 (bloco -> imp .)
    FECHACHAVE      reduce using rule 14 (bloco -> imp .)


state 11

    (15) bloco -> le .

    ABREPARENTESE   reduce using rule 15 (bloco -> le .)
    PRA             reduce using rule 15 (bloco -> le .)
    SE              reduce using rule 15 (bloco -> le .)
    IMP             reduce using rule 15 (bloco -> le .)
    LE              reduce using rule 15 (bloco -> le .)
    TIPO            reduce using rule 15 (bloco -> le .)
    ATRIBUIR        reduce using rule 15 (bloco -> le .)
    COMENTARIOS     reduce using rule 15 (bloco -> le .)
    ID              reduce using rule 15 (bloco -> le .)
    FECHACHAVE      reduce using rule 15 (bloco -> le .)


state 12

    (16) bloco -> atribuir .

    ABREPARENTESE   reduce using rule 16 (bloco -> atribuir .)
    PRA             reduce using rule 16 (bloco -> atribuir .)
    SE              reduce using rule 16 (bloco -> atribuir .)
    IMP             reduce using rule 16 (bloco -> atribuir .)
    LE              reduce using rule 16 (bloco -> atribuir .)
    TIPO            reduce using rule 16 (bloco -> atribuir .)
    ATRIBUIR        reduce using rule 16 (bloco -> atribuir .)
    COMENTARIOS     reduce using rule 16 (bloco -> atribuir .)
    ID              reduce using rule 16 (bloco -> atribuir .)
    FECHACHAVE      reduce using rule 16 (bloco -> atribuir .)


state 13

    (17) bloco -> atribuicao .

    ABREPARENTESE   reduce using rule 17 (bloco -> atribuicao .)
    PRA             reduce using rule 17 (bloco -> atribuicao .)
    SE              reduce using rule 17 (bloco -> atribuicao .)
    IMP             reduce using rule 17 (bloco -> atribuicao .)
    LE              reduce using rule 17 (bloco -> atribuicao .)
    TIPO            reduce using rule 17 (bloco -> atribuicao .)
    ATRIBUIR        reduce using rule 17 (bloco -> atribuicao .)
    COMENTARIOS     reduce using rule 17 (bloco -> atribuicao .)
    ID              reduce using rule 17 (bloco -> atribuicao .)
    FECHACHAVE      reduce using rule 17 (bloco -> atribuicao .)


state 14

    (18) bloco -> comentarios .

    ABREPARENTESE   reduce using rule 18 (bloco -> comentarios .)
    PRA             reduce using rule 18 (bloco -> comentarios .)
    SE              reduce using rule 18 (bloco -> comentarios .)
    IMP             reduce using rule 18 (bloco -> comentarios .)
    LE              reduce using rule 18 (bloco -> comentarios .)
    TIPO            reduce using rule 18 (bloco -> comentarios .)
    ATRIBUIR        reduce using rule 18 (bloco -> comentarios .)
    COMENTARIOS     reduce using rule 18 (bloco -> comentarios .)
    ID              reduce using rule 18 (bloco -> comentarios .)
    FECHACHAVE      reduce using rule 18 (bloco -> comentarios .)


state 15

    (42) enqt -> ABREPARENTESE . condicional FECHAPARENTESE ENQT ABRECHAVE blocos FECHACHAVE
    (35) condicional -> . atomica
    (36) condicional -> . atomica LOGICO atomica
    (37) atomica -> . RESPOSTABOOLEANA
    (38) atomica -> . NUM
    (39) atomica -> . id
    (40) atomica -> . NAO condicional
    (41) atomica -> . condicional RELACIONAL condicional
    (3) id -> . ID

    RESPOSTABOOLEANA shift and go to state 29
    NUM             shift and go to state 30
    NAO             shift and go to state 32
    ID              shift and go to state 22

    condicional                    shift and go to state 27
    atomica                        shift and go to state 28
    id                             shift and go to state 31

state 16

    (46) pra -> PRA . ABREPARENTESE id expressao expressao FECHAPARENTESE ABRECHAVE bloco FECHACHAVE

    ABREPARENTESE   shift and go to state 33


state 17

    (33) atribuir -> id . atribuicao PONTOEVIRGULA
    (28) atribuicao -> . ATRIBUIR expressao
    (29) atribuicao -> . ATRIBUIR ABRECOLCHETE lista FECHACOLCHETE

    ATRIBUIR        shift and go to state 23

    atribuicao                     shift and go to state 34

state 18

    (44) se -> SE . ABREPARENTESE condicional FECHAPARENTESE ABRECHAVE blocos FECHACHAVE
    (45) se -> SE . ABREPARENTESE condicional FECHAPARENTESE ABRECHAVE blocos FECHACHAVE senao

    ABREPARENTESE   shift and go to state 35


state 19

    (5) imp -> IMP . ABREPARENTESE str FECHAPARENTESE PONTOEVIRGULA
    (6) imp -> IMP . ABREPARENTESE expressao FECHAPARENTESE PONTOEVIRGULA

    ABREPARENTESE   shift and go to state 36


state 20

    (4) le -> LE . ABREPARENTESE TIPO id FECHAPARENTESE PONTOEVIRGULA

    ABREPARENTESE   shift and go to state 37


state 21

    (34) atribuir -> TIPO . ID atribuicao PONTOEVIRGULA

    ID              shift and go to state 38


state 22

    (3) id -> ID .

    ATRIBUIR        reduce using rule 3 (id -> ID .)
    LOGICO          reduce using rule 3 (id -> ID .)
    FECHAPARENTESE  reduce using rule 3 (id -> ID .)
    RELACIONAL      reduce using rule 3 (id -> ID .)
    OPERADOR_DIVISAO reduce using rule 3 (id -> ID .)
    OPERADOR_MULTIPLICACAO reduce using rule 3 (id -> ID .)
    OPERADOR_MAIS   reduce using rule 3 (id -> ID .)
    OPERADOR_MENOS  reduce using rule 3 (id -> ID .)
    ABREPARENTESE   reduce using rule 3 (id -> ID .)
    PRA             reduce using rule 3 (id -> ID .)
    SE              reduce using rule 3 (id -> ID .)
    IMP             reduce using rule 3 (id -> ID .)
    LE              reduce using rule 3 (id -> ID .)
    TIPO            reduce using rule 3 (id -> ID .)
    COMENTARIOS     reduce using rule 3 (id -> ID .)
    ID              reduce using rule 3 (id -> ID .)
    FECHACHAVE      reduce using rule 3 (id -> ID .)
    PONTOEVIRGULA   reduce using rule 3 (id -> ID .)
    NUM             reduce using rule 3 (id -> ID .)
    RESPOSTABOOLEANA reduce using rule 3 (id -> ID .)
    FECHACOLCHETE   reduce using rule 3 (id -> ID .)
    VIRGULA         reduce using rule 3 (id -> ID .)


state 23

    (28) atribuicao -> ATRIBUIR . expressao
    (29) atribuicao -> ATRIBUIR . ABRECOLCHETE lista FECHACOLCHETE
    (19) expressao -> . id
    (20) expressao -> . NUM
    (21) expressao -> . aritimetico
    (22) expressao -> . ABREPARENTESE expressao FECHAPARENTESE
    (23) expressao -> . RESPOSTABOOLEANA
    (3) id -> . ID
    (24) aritimetico -> . expressao OPERADOR_DIVISAO expressao
    (25) aritimetico -> . expressao OPERADOR_MULTIPLICACAO expressao
    (26) aritimetico -> . expressao OPERADOR_MAIS expressao
    (27) aritimetico -> . expressao OPERADOR_MENOS expressao

    ABRECOLCHETE    shift and go to state 40
    NUM             shift and go to state 42
    ABREPARENTESE   shift and go to state 44
    RESPOSTABOOLEANA shift and go to state 45
    ID              shift and go to state 22

    expressao                      shift and go to state 39
    id                             shift and go to state 41
    aritimetico                    shift and go to state 43

state 24

    (10) comentarios -> COMENTARIOS .

    ABREPARENTESE   reduce using rule 10 (comentarios -> COMENTARIOS .)
    PRA             reduce using rule 10 (comentarios -> COMENTARIOS .)
    SE              reduce using rule 10 (comentarios -> COMENTARIOS .)
    IMP             reduce using rule 10 (comentarios -> COMENTARIOS .)
    LE              reduce using rule 10 (comentarios -> COMENTARIOS .)
    TIPO            reduce using rule 10 (comentarios -> COMENTARIOS .)
    ATRIBUIR        reduce using rule 10 (comentarios -> COMENTARIOS .)
    COMENTARIOS     reduce using rule 10 (comentarios -> COMENTARIOS .)
    ID              reduce using rule 10 (comentarios -> COMENTARIOS .)
    FECHACHAVE      reduce using rule 10 (comentarios -> COMENTARIOS .)


state 25

    (2) inicio -> INICIO ABRECHAVE blocos FECHACHAVE .

    $end            reduce using rule 2 (inicio -> INICIO ABRECHAVE blocos FECHACHAVE .)


state 26

    (8) blocos -> bloco blocos .

    FECHACHAVE      reduce using rule 8 (blocos -> bloco blocos .)


state 27

    (42) enqt -> ABREPARENTESE condicional . FECHAPARENTESE ENQT ABRECHAVE blocos FECHACHAVE
    (41) atomica -> condicional . RELACIONAL condicional

    FECHAPARENTESE  shift and go to state 46
    RELACIONAL      shift and go to state 47


state 28

    (35) condicional -> atomica .
    (36) condicional -> atomica . LOGICO atomica

  ! shift/reduce conflict for LOGICO resolved as shift
    FECHAPARENTESE  reduce using rule 35 (condicional -> atomica .)
    RELACIONAL      reduce using rule 35 (condicional -> atomica .)
    LOGICO          shift and go to state 48

  ! LOGICO          [ reduce using rule 35 (condicional -> atomica .) ]


state 29

    (37) atomica -> RESPOSTABOOLEANA .

    LOGICO          reduce using rule 37 (atomica -> RESPOSTABOOLEANA .)
    FECHAPARENTESE  reduce using rule 37 (atomica -> RESPOSTABOOLEANA .)
    RELACIONAL      reduce using rule 37 (atomica -> RESPOSTABOOLEANA .)


state 30

    (38) atomica -> NUM .

    LOGICO          reduce using rule 38 (atomica -> NUM .)
    FECHAPARENTESE  reduce using rule 38 (atomica -> NUM .)
    RELACIONAL      reduce using rule 38 (atomica -> NUM .)


state 31

    (39) atomica -> id .

    LOGICO          reduce using rule 39 (atomica -> id .)
    FECHAPARENTESE  reduce using rule 39 (atomica -> id .)
    RELACIONAL      reduce using rule 39 (atomica -> id .)


state 32

    (40) atomica -> NAO . condicional
    (35) condicional -> . atomica
    (36) condicional -> . atomica LOGICO atomica
    (37) atomica -> . RESPOSTABOOLEANA
    (38) atomica -> . NUM
    (39) atomica -> . id
    (40) atomica -> . NAO condicional
    (41) atomica -> . condicional RELACIONAL condicional
    (3) id -> . ID

    RESPOSTABOOLEANA shift and go to state 29
    NUM             shift and go to state 30
    NAO             shift and go to state 32
    ID              shift and go to state 22

    condicional                    shift and go to state 49
    atomica                        shift and go to state 28
    id                             shift and go to state 31

state 33

    (46) pra -> PRA ABREPARENTESE . id expressao expressao FECHAPARENTESE ABRECHAVE bloco FECHACHAVE
    (3) id -> . ID

    ID              shift and go to state 22

    id                             shift and go to state 50

state 34

    (33) atribuir -> id atribuicao . PONTOEVIRGULA

    PONTOEVIRGULA   shift and go to state 51


state 35

    (44) se -> SE ABREPARENTESE . condicional FECHAPARENTESE ABRECHAVE blocos FECHACHAVE
    (45) se -> SE ABREPARENTESE . condicional FECHAPARENTESE ABRECHAVE blocos FECHACHAVE senao
    (35) condicional -> . atomica
    (36) condicional -> . atomica LOGICO atomica
    (37) atomica -> . RESPOSTABOOLEANA
    (38) atomica -> . NUM
    (39) atomica -> . id
    (40) atomica -> . NAO condicional
    (41) atomica -> . condicional RELACIONAL condicional
    (3) id -> . ID

    RESPOSTABOOLEANA shift and go to state 29
    NUM             shift and go to state 30
    NAO             shift and go to state 32
    ID              shift and go to state 22

    condicional                    shift and go to state 52
    atomica                        shift and go to state 28
    id                             shift and go to state 31

state 36

    (5) imp -> IMP ABREPARENTESE . str FECHAPARENTESE PONTOEVIRGULA
    (6) imp -> IMP ABREPARENTESE . expressao FECHAPARENTESE PONTOEVIRGULA
    (7) str -> . TXT
    (19) expressao -> . id
    (20) expressao -> . NUM
    (21) expressao -> . aritimetico
    (22) expressao -> . ABREPARENTESE expressao FECHAPARENTESE
    (23) expressao -> . RESPOSTABOOLEANA
    (3) id -> . ID
    (24) aritimetico -> . expressao OPERADOR_DIVISAO expressao
    (25) aritimetico -> . expressao OPERADOR_MULTIPLICACAO expressao
    (26) aritimetico -> . expressao OPERADOR_MAIS expressao
    (27) aritimetico -> . expressao OPERADOR_MENOS expressao

    TXT             shift and go to state 55
    NUM             shift and go to state 42
    ABREPARENTESE   shift and go to state 44
    RESPOSTABOOLEANA shift and go to state 45
    ID              shift and go to state 22

    str                            shift and go to state 53
    expressao                      shift and go to state 54
    id                             shift and go to state 41
    aritimetico                    shift and go to state 43

state 37

    (4) le -> LE ABREPARENTESE . TIPO id FECHAPARENTESE PONTOEVIRGULA

    TIPO            shift and go to state 56


state 38

    (34) atribuir -> TIPO ID . atribuicao PONTOEVIRGULA
    (28) atribuicao -> . ATRIBUIR expressao
    (29) atribuicao -> . ATRIBUIR ABRECOLCHETE lista FECHACOLCHETE

    ATRIBUIR        shift and go to state 23

    atribuicao                     shift and go to state 57

state 39

    (28) atribuicao -> ATRIBUIR expressao .
    (24) aritimetico -> expressao . OPERADOR_DIVISAO expressao
    (25) aritimetico -> expressao . OPERADOR_MULTIPLICACAO expressao
    (26) aritimetico -> expressao . OPERADOR_MAIS expressao
    (27) aritimetico -> expressao . OPERADOR_MENOS expressao

    ABREPARENTESE   reduce using rule 28 (atribuicao -> ATRIBUIR expressao .)
    PRA             reduce using rule 28 (atribuicao -> ATRIBUIR expressao .)
    SE              reduce using rule 28 (atribuicao -> ATRIBUIR expressao .)
    IMP             reduce using rule 28 (atribuicao -> ATRIBUIR expressao .)
    LE              reduce using rule 28 (atribuicao -> ATRIBUIR expressao .)
    TIPO            reduce using rule 28 (atribuicao -> ATRIBUIR expressao .)
    ATRIBUIR        reduce using rule 28 (atribuicao -> ATRIBUIR expressao .)
    COMENTARIOS     reduce using rule 28 (atribuicao -> ATRIBUIR expressao .)
    ID              reduce using rule 28 (atribuicao -> ATRIBUIR expressao .)
    FECHACHAVE      reduce using rule 28 (atribuicao -> ATRIBUIR expressao .)
    PONTOEVIRGULA   reduce using rule 28 (atribuicao -> ATRIBUIR expressao .)
    OPERADOR_DIVISAO shift and go to state 58
    OPERADOR_MULTIPLICACAO shift and go to state 59
    OPERADOR_MAIS   shift and go to state 60
    OPERADOR_MENOS  shift and go to state 61


state 40

    (29) atribuicao -> ATRIBUIR ABRECOLCHETE . lista FECHACOLCHETE
    (30) lista -> . NUM
    (31) lista -> . id
    (32) lista -> . lista VIRGULA lista
    (3) id -> . ID

    NUM             shift and go to state 63
    ID              shift and go to state 22

    lista                          shift and go to state 62
    id                             shift and go to state 64

state 41

    (19) expressao -> id .

    OPERADOR_DIVISAO reduce using rule 19 (expressao -> id .)
    OPERADOR_MULTIPLICACAO reduce using rule 19 (expressao -> id .)
    OPERADOR_MAIS   reduce using rule 19 (expressao -> id .)
    OPERADOR_MENOS  reduce using rule 19 (expressao -> id .)
    ABREPARENTESE   reduce using rule 19 (expressao -> id .)
    PRA             reduce using rule 19 (expressao -> id .)
    SE              reduce using rule 19 (expressao -> id .)
    IMP             reduce using rule 19 (expressao -> id .)
    LE              reduce using rule 19 (expressao -> id .)
    TIPO            reduce using rule 19 (expressao -> id .)
    ATRIBUIR        reduce using rule 19 (expressao -> id .)
    COMENTARIOS     reduce using rule 19 (expressao -> id .)
    ID              reduce using rule 19 (expressao -> id .)
    FECHACHAVE      reduce using rule 19 (expressao -> id .)
    PONTOEVIRGULA   reduce using rule 19 (expressao -> id .)
    FECHAPARENTESE  reduce using rule 19 (expressao -> id .)
    NUM             reduce using rule 19 (expressao -> id .)
    RESPOSTABOOLEANA reduce using rule 19 (expressao -> id .)


state 42

    (20) expressao -> NUM .

    OPERADOR_DIVISAO reduce using rule 20 (expressao -> NUM .)
    OPERADOR_MULTIPLICACAO reduce using rule 20 (expressao -> NUM .)
    OPERADOR_MAIS   reduce using rule 20 (expressao -> NUM .)
    OPERADOR_MENOS  reduce using rule 20 (expressao -> NUM .)
    ABREPARENTESE   reduce using rule 20 (expressao -> NUM .)
    PRA             reduce using rule 20 (expressao -> NUM .)
    SE              reduce using rule 20 (expressao -> NUM .)
    IMP             reduce using rule 20 (expressao -> NUM .)
    LE              reduce using rule 20 (expressao -> NUM .)
    TIPO            reduce using rule 20 (expressao -> NUM .)
    ATRIBUIR        reduce using rule 20 (expressao -> NUM .)
    COMENTARIOS     reduce using rule 20 (expressao -> NUM .)
    ID              reduce using rule 20 (expressao -> NUM .)
    FECHACHAVE      reduce using rule 20 (expressao -> NUM .)
    PONTOEVIRGULA   reduce using rule 20 (expressao -> NUM .)
    FECHAPARENTESE  reduce using rule 20 (expressao -> NUM .)
    NUM             reduce using rule 20 (expressao -> NUM .)
    RESPOSTABOOLEANA reduce using rule 20 (expressao -> NUM .)


state 43

    (21) expressao -> aritimetico .

    OPERADOR_DIVISAO reduce using rule 21 (expressao -> aritimetico .)
    OPERADOR_MULTIPLICACAO reduce using rule 21 (expressao -> aritimetico .)
    OPERADOR_MAIS   reduce using rule 21 (expressao -> aritimetico .)
    OPERADOR_MENOS  reduce using rule 21 (expressao -> aritimetico .)
    ABREPARENTESE   reduce using rule 21 (expressao -> aritimetico .)
    PRA             reduce using rule 21 (expressao -> aritimetico .)
    SE              reduce using rule 21 (expressao -> aritimetico .)
    IMP             reduce using rule 21 (expressao -> aritimetico .)
    LE              reduce using rule 21 (expressao -> aritimetico .)
    TIPO            reduce using rule 21 (expressao -> aritimetico .)
    ATRIBUIR        reduce using rule 21 (expressao -> aritimetico .)
    COMENTARIOS     reduce using rule 21 (expressao -> aritimetico .)
    ID              reduce using rule 21 (expressao -> aritimetico .)
    FECHACHAVE      reduce using rule 21 (expressao -> aritimetico .)
    PONTOEVIRGULA   reduce using rule 21 (expressao -> aritimetico .)
    FECHAPARENTESE  reduce using rule 21 (expressao -> aritimetico .)
    NUM             reduce using rule 21 (expressao -> aritimetico .)
    RESPOSTABOOLEANA reduce using rule 21 (expressao -> aritimetico .)


state 44

    (22) expressao -> ABREPARENTESE . expressao FECHAPARENTESE
    (19) expressao -> . id
    (20) expressao -> . NUM
    (21) expressao -> . aritimetico
    (22) expressao -> . ABREPARENTESE expressao FECHAPARENTESE
    (23) expressao -> . RESPOSTABOOLEANA
    (3) id -> . ID
    (24) aritimetico -> . expressao OPERADOR_DIVISAO expressao
    (25) aritimetico -> . expressao OPERADOR_MULTIPLICACAO expressao
    (26) aritimetico -> . expressao OPERADOR_MAIS expressao
    (27) aritimetico -> . expressao OPERADOR_MENOS expressao

    NUM             shift and go to state 42
    ABREPARENTESE   shift and go to state 44
    RESPOSTABOOLEANA shift and go to state 45
    ID              shift and go to state 22

    expressao                      shift and go to state 65
    id                             shift and go to state 41
    aritimetico                    shift and go to state 43

state 45

    (23) expressao -> RESPOSTABOOLEANA .
